--- a/kelas-5/tugas/tugas.html
+++ b/kelas-5/tugas/tugas.html
@@ -71,7 +71,7 @@
       text-shadow: 1px 1px 2px rgba(255,255,255,0.6);
     }
 
-    /* Dropdown Menu */
+    /* Tombol Tugas */
     .task-container {
       display: flex;
       justify-content: center;
@@ -81,12 +81,7 @@
       max-width: 900px;
     }
 
-    .dropdown {
-      position: relative;
-      display: inline-block;
-    }
-
-    .dropbtn {
+    .task-container a {
       flex: 1 1 250px;
       background: rgba(255,255,255,0.9);
       border-radius: 12px;
@@ -97,45 +92,13 @@
       cursor: pointer;
       transition: transform 0.3s ease, box-shadow 0.3s ease;
       color: #0288d1;
-      border: none;
+      text-decoration: none;
       width: 250px;
     }
 
-    .dropbtn:hover {
+    .task-container a:hover {
       transform: translateY(-5px);
       box-shadow: 0 6px 12px rgba(0,0,0,0.25);
-    }
-
-    .dropdown-content {
-      display: none;
-      position: absolute;
-      background: rgba(255,255,255,0.95);
-      border-radius: 8px;
-      min-width: 200px;
-      z-index: 1;
-      margin-top: 5px;
-      box-shadow: 0 6px 12px rgba(0,0,0,0.25);
-    }
-
-    .dropdown-content a {
-      display: block;
-      padding: 10px;
-      text-decoration: none;
-      color: #0288d1;
-      font-weight: bold;
-      border-bottom: 1px solid #ddd;
-    }
-
-    .dropdown-content a:last-child {
-      border-bottom: none;
-    }
-
-    .dropdown-content a:hover {
-      background: #f1f1f1;
-    }
-
-    .dropdown:hover .dropdown-content {
-      display: block;
     }
   </style>
 </head>
@@ -160,109 +123,25 @@
     <h1>📚 Tugas Kelas 5</h1>
   </div>
 
-  <!-- Kotak Dropdown Tugas -->
+  <!-- Tombol Mapel -->
   <div class="task-container">
-    <!-- Bahasa Indonesia -->
-    <div class="dropdown">
-      <button class="dropbtn">📘 Bahasa Indonesia</button>
-      <div class="dropdown-content">
-        <a href="#" onclick="downloadFile('Latihan Soal Bahasa Indonesia kelas 5 Semester 1.docx')">Tugas 1</a>
-        <a href="#" onclick="downloadFile('Latihan Soal Bahasa Indonesia 2 Kelas 5 Semester 1.docx')">Tugas 2</a>
-        <a href="#">Tugas 3</a>
-        <a href="#">Tugas 4</a>
-        <a href="#">Tugas 5</a>
-        <a href="#">Tugas 6</a>
-        <a href="#">Tugas 7</a>
-        <a href="#">Tugas 8</a>
-        <a href="#">Tugas 9</a>
-        <a href="#">Tugas 10</a>
-      </div>
-    </div>
-
-    <!-- Matematika -->
-    <div class="dropdown">
-      <button class="dropbtn">📗 Matematika</button>
-      <div class="dropdown-content">
-        <a href="#" onclick="downloadFile('Latihan Soal Matematika kelas 5 semester 1.docx')">Tugas 1</a>
-        <a href="#">Tugas 2</a>
-        <a href="#">Tugas 3</a>
-        <a href="#">Tugas 4</a>
-        <a href="#">Tugas 5</a>
-        <a href="#">Tugas 6</a>
-        <a href="#">Tugas 7</a>
-        <a href="#">Tugas 8</a>
-        <a href="#">Tugas 9</a>
-        <a href="#">Tugas 10</a>
-      </div>
-    </div>
-
-    <!-- Pancasila -->
-    <div class="dropdown">
-      <button class="dropbtn">📙 Pancasila</button>
-      <div class="dropdown-content">
-        <a href="#" onclick="downloadFile('Latihan Soal Pancasila kelas 5 Semester 1.docx')">Tugas 1</a>
-        <a href="#">Tugas 2</a>
-        <a href="#">Tugas 3</a>
-        <a href="#">Tugas 4</a>
-        <a href="#">Tugas 5</a>
-        <a href="#">Tugas 6</a>
-        <a href="#">Tugas 7</a>
-        <a href="#">Tugas 8</a>
-        <a href="#">Tugas 9</a>
-        <a href="#">Tugas 10</a>
-      </div>
-    </div>
-
-    <!-- IPAS -->
-    <div class="dropdown">
-      <button class="dropbtn">🌍 IPAS</button>
-      <div class="dropdown-content">
-        <a href="#" onclick="downloadFile('Latihan Soal IPAS Kelas 5 Semester 1.docx')">Tugas 1</a>
-        <a href="#">Tugas 2</a>
-        <a href="#">Tugas 3</a>
-        <a href="#">Tugas 4</a>
-        <a href="#">Tugas 5</a>
-        <a href="#">Tugas 6</a>
-        <a href="#">Tugas 7</a>
-        <a href="#">Tugas 8</a>
-        <a href="#">Tugas 9</a>
-        <a href="#">Tugas 10</a>
-      </div>
-    </div>
-
-    <!-- Bahasa Jawa -->
-    <div class="dropdown">
-      <button class="dropbtn">🎋 Bahasa Jawa</button>
-      <div class="dropdown-content">
-        <a href="#" onclick="downloadFile('Latihan Soal Bahasa Jawa Kelas 5 Semester 1.docx')">Tugas 1</a>
-        <a href="#">Tugas 2</a>
-        <a href="#">Tugas 3</a>
-        <a href="#">Tugas 4</a>
-        <a href="#">Tugas 5</a>
-        <a href="#">Tugas 6</a>
-        <a href="#">Tugas 7</a>
-        <a href="#">Tugas 8</a>
-        <a href="#">Tugas 9</a>
-        <a href="#">Tugas 10</a>
-      </div>
-    </div>
+    <a href="tugas-bIndo.html">📘 Bahasa Indonesia</a>
+    <a href="tugas-mtk.html">📗 Matematika</a>
+    <a href="tugas-pc.html">📙 Pancasila</a>
+    <a href="tugas-IPAS.html">🌍 IPAS</a>
+    <a href="tugas-BJ.html">🎋 Bahasa Jawa</a>
   </div>
 
   <!-- Suara klik interaktif -->
   <audio id="clickSound" src="suara/button-press.mp3" preload="auto"></audio>
   <script>
-    function downloadFile(fileUrl) {
-      const clickSound = document.getElementById("clickSound");
-      clickSound.currentTime = 0;
-      clickSound.play();
-
-      const link = document.createElement("a");
-      link.href = fileUrl;
-      link.download = fileUrl.split("/").pop();
-      document.body.appendChild(link);
-      link.click();
-      document.body.removeChild(link);
-    }
+    document.querySelectorAll(".task-container a").forEach(link => {
+      link.addEventListener("click", () => {
+        const clickSound = document.getElementById("clickSound");
+        clickSound.currentTime = 0;
+        clickSound.play();
+      });
+    });
   </script>
 
 </body>
