--- a/kelas-5/tugas/tugas-bIndo.html
+++ b/kelas-5/tugas/tugas-bIndo.html
@@ -148,7 +148,7 @@
     </div>
     <div class="nav-right">
       <a href="../../index.html">🏠 Beranda</a>
-      <a href="../Petualangan-Kelas-5.html">◀️ Kembali</a>
+      <a href="tugas.html">◀️ Kembali</a>
       <a href="#">🖼️ Galeri</a>
     </div>
   </nav>
@@ -212,3 +212,4 @@
 
 </body>
 </html>
+
