--- a/kelas-5/tugas/tugas-BJ.html
+++ b/kelas-5/tugas/tugas-BJ.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Tugas Bahasa Indonesia</title>
+  <title>Tugas Bahasa Jawa</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet"/>
   <style>
     html, body {
@@ -212,3 +212,4 @@
 
 </body>
 </html>
+
