--- a/kelas-5/tugas/tugas-IPAS.html
+++ b/kelas-5/tugas/tugas-IPAS.html
@@ -155,7 +155,7 @@
 
   <!-- Judul Halaman -->
   <div class="title-section">
-    <h1>📚 Tugas Bahasa Jawa</h1>
+    <h1>📚 Tugas IPAS</h1>
   </div>
 
   <!-- Kotak Dropdown Tugas -->
@@ -212,3 +212,4 @@
 
 </body>
 </html>
+
