--- a/kelas-5/lembah/AKM/AKM.html
+++ b/kelas-5/lembah/AKM/AKM.html
@@ -76,7 +76,7 @@ h1 img {
     <!-- Dropdown Pilihan Latihan -->
     <select id="menuLatihan" onchange="pilihLatihan()">
         <option value="">-- Pilih Opsi --</option>
-        <option value="numerasi/numerasi.html">numerasi</option>
+        <option value="numerasi/Numerasi-pilih-paket.html">numerasi</option>
         <option value="literasi/literasi.html">literasi</option>
     </select>
 </div>
@@ -92,6 +92,7 @@ function pilihLatihan() {
 </script>
 </body>
 </html>
+
 
 
 
