--- a/kelas-5/lembah/AKM/numerasi/Numerasi-pilih-paket.html
+++ b/kelas-5/lembah/AKM/numerasi/Numerasi-pilih-paket.html
@@ -76,7 +76,7 @@ h1 img {
     <!-- Dropdown Pilihan Paket -->
     <select id="menuLatihan" onchange="pilihLatihan()">
         <option value="">-- Pilih Paket Soal --</option>
-        <option value="paketA.html">Paket A</option>
+        <option value="Numerasi-paketA.html">Paket A</option>
         <option value="paketB.html">Paket B</option>
         <option value="paketC.html">Paket C</option>
     </select>
@@ -93,3 +93,4 @@ function pilihLatihan() {
 </script>
 </body>
 </html>
+
