--- a/kelas-5/lembah/AKM/numerasi/paketA/soal1.html
+++ b/kelas-5/lembah/AKM/numerasi/paketA/soal1.html
@@ -207,11 +207,11 @@
     <button id="btnPembahasan" class="btn-pembahasan" onclick="bukaPembahasan()">Pembahasan</button>
 
     <div class="navigasi">
-      <a href="numerasi/Numerasi-paketA.html" class="btn-kembali">⬅ Kembali</a>
+      <a href="../Numerasi-paketA.html" class="btn-kembali">⬅ Kembali</a>
       <div class="gambar-nav">
         <img src="https://i.imgur.com/LqQVDoS.png" alt="Ikon Tengah">
       </div>
-      <a href="numerasi/Numerasi-paketA.html" class="btn-lanjut">Lanjut ➡</a>
+      <a href="../Numerasi-paketA.html" class="btn-lanjut">Lanjut ➡</a>
     </div>
   </div>
 
@@ -259,5 +259,6 @@
   </script>
 </body>
 </html>
+
 
 
