--- a/kelas-5/lembah/AKM/numerasi/paketA/soal10.html
+++ b/kelas-5/lembah/AKM/numerasi/paketA/soal10.html
@@ -181,9 +181,9 @@
     </div>
 
     <div class="buttons">
-      <a href="numerasi.html"><button class="btn btn-red">Soal sebelumnya</button></a>
+      <a href="../Numerasi-paketA.html"><button class="btn btn-red">Soal sebelumnya</button></a>
       <button class="btn btn-yellow" id="openModal">Pembahasan</button>
-      <a href="numerasi.html"><button class="btn btn-blue">Soal berikutnya</button></a>
+      <a href="../Numerasi-paketA.html"><button class="btn btn-blue">Soal berikutnya</button></a>
     </div>
 
     <div class="sumber">
