--- a/kelas-5/lembah/AKM/numerasi/paketA/soal2.html
+++ b/kelas-5/lembah/AKM/numerasi/paketA/soal2.html
@@ -114,7 +114,7 @@
   <div class="judul">SOAL LATIHAN ANBK</div>
 
   <div class="soal">
-    <h2>Soal Latihan 1</h2>
+    <h2>Soal Latihan 2</h2>
 
     <p>Permainan berlanjut. Permainan sudah sampai ke lapisan kedua!<br>
     Perhatikan susunan bilangan pada balok berikut:</p>
@@ -170,9 +170,9 @@
     </form>
 
     <div class="navigasi">
-      <a href="numerasi.html" class="btn-kembali">⬅ Kembali</a>
+      <a href="../Numerasi-paketA.html" class="btn-kembali">⬅ Kembali</a>
       <img src="https://i.imgur.com/LqQVDoS.png" alt="Ikon Navigasi">
-      <a href="numerasi.html" class="btn-lanjut">Lanjut ➡</a>
+      <a href="../Numerasi-paketA.html" class="btn-lanjut">Lanjut ➡</a>
     </div>
   </div>
 
