--- a/kelas-5/lembah/AKM/numerasi/paketA/soal4.html
+++ b/kelas-5/lembah/AKM/numerasi/paketA/soal4.html
@@ -135,9 +135,9 @@
 
     <!-- Tombol Navigasi -->
     <div class="buttons">
-      <button onclick="location.href='numerasi.html'">⬅ Kembali</button>
+      <button onclick="location.href='../Numerasi-paketA.html'">⬅ Kembali</button>
       <img src="https://i.imgur.com/LqQVDoS.png" alt="Icon" style="height:40px"/>
-      <button onclick="location.href='numerasi.html'">Lanjut ➡</button>
+      <button onclick="location.href='../Numerasi-paketA.html'">Lanjut ➡</button>
       <button id="btnPembahasan" onclick="openModal()" disabled>📺 Pembahasan</button>
     </div>
 
