--- a/kelas-5/lembah/AKM/numerasi/paketA/soal3.html
+++ b/kelas-5/lembah/AKM/numerasi/paketA/soal3.html
@@ -55,7 +55,7 @@
       gap: 12px;
     }
     .navigasi img {
-      width: 480px; /* diperbesar 4x */
+      width: 480px;
       height: auto;
     }
     /* Popup */
@@ -118,9 +118,9 @@
 
   <!-- Tombol Navigasi -->
   <div class="navigasi">
-    <button class="../Numerasi-paketA.html" onclick="kembali()">⬅ Kembali</button>
+    <button class="btn-kembali" onclick="kembali()">⬅ Kembali</button>
     <img src="https://i.imgur.com/LqQVDoS.png" alt="Logo Tengah">
-    <button class="../Numerasi-paketA.html" onclick="lanjut()">Selanjutnya ➡</button>
+    <button class="btn-lanjut" onclick="lanjut()">Selanjutnya ➡</button>
   </div>
 
   <!-- Popup Pembahasan -->
@@ -137,7 +137,7 @@
   <script>
     function kirimJawaban() {
       let jwb = document.getElementById('jawaban').value.trim();
-      if(jwb !== "") {
+      if (jwb !== "") {
         document.getElementById('pembahasanBtn').style.display = 'inline-block';
       }
     }
@@ -160,11 +160,11 @@
     }
 
     function kembali() {
-      window.location.href = "numerasi.html";
+      window.location.href = "../Numerasi-paketA.html";
     }
 
     function lanjut() {
-      window.location.href = "numerasi.html";
+      window.location.href = "../Numerasi-paketA.html";
     }
   </script>
 </body>
