--- a/kelas-5/lembah/AKM/numerasi/paketA/soal7.html
+++ b/kelas-5/lembah/AKM/numerasi/paketA/soal7.html
@@ -183,9 +183,9 @@
 
     <!-- Header judul + tombol kiri/kanan -->
     <div class="header">
-      <a class="btn-head btn-lanjut" href="numerasi.html">➜ Lanjut</a>
+      <a class="btn-head btn-lanjut" href="../Numerasi-paketA.html">➜ Lanjut</a>
       <div class="judul">Latihan Soal ANBK</div>
-      <a class="btn-head btn-kembali" href="numerasi.html">Kembali</a>
+      <a class="btn-head btn-kembali" href="../Numerasi-paketA.html">Kembali</a>
     </div>
 
     <!-- Subjudul -->
