--- a/kelas-5/lembah/AKM/numerasi/paketA/soal9.html
+++ b/kelas-5/lembah/AKM/numerasi/paketA/soal9.html
@@ -155,8 +155,8 @@
     <div id="hasil"></div>
 
     <div class="navigasi">
-      <button onclick="window.location.href='numerasi.html'">⬅️ Kembali</button>
-      <button onclick="window.location.href='numerasi.html'">Lanjutkan ➡️</button>
+      <button onclick="window.location.href='../Numerasi-paketA.html'">⬅️ Kembali</button>
+      <button onclick="window.location.href='../Numerasi-paketA.html'">Lanjutkan ➡️</button>
     </div>
   </div>
 
