--- a/kelas-5/lembah/AKM/numerasi/Numerasi-paketA.html
+++ b/kelas-5/lembah/AKM/numerasi/Numerasi-paketA.html
@@ -76,7 +76,7 @@ h1 img {
 <body>
 <div class="container">
     <div class="nav">
-        <a href="../AKM.html">◀️ kembali</a>
+        <a href="Numerasi-pilih-paket.html">◀️ kembali</a>
         <a href="soal-wisata1.pdf" download>📥 Download</a>
     </div>
     <h1 style="color: #2c3e50; text-align: center; background-color: white; padding: 10px 20px; border-radius: 10px; border: 2px solid #add8e6;">
@@ -113,4 +113,5 @@ function pilihSoal() {
 </script>
 </body>
 </html>
+
 
