--- a/kelas-5/lembah/AKM/numerasi/Numerasi-pilih-paket.html
+++ b/kelas-5/lembah/AKM/numerasi/Numerasi-pilih-paket.html
@@ -77,8 +77,8 @@ h1 img {
     <select id="menuLatihan" onchange="pilihLatihan()">
         <option value="">-- Pilih Paket Soal --</option>
         <option value="Numerasi-paketA.html">Paket A</option>
-        <option value="paketB.html">Paket B</option>
-        <option value="paketC.html">Paket C</option>
+        <option value="Numerasi-paketA.html">Paket B</option>
+        <option value="#paketC.html">Paket C</option>
     </select>
 </div>
 
@@ -93,4 +93,5 @@ function pilihLatihan() {
 </script>
 </body>
 </html>
+
 
