--- a/kelas-5/lembah/AKM/numerasi/paketB/soal1.html
+++ b/kelas-5/lembah/AKM/numerasi/paketB/soal1.html
@@ -139,8 +139,8 @@
       <div class="teks">Latihanh Soal 11</div>
       <div class="nav-panah">
         <!-- Keduanya menuju numerasi.html sesuai permintaan -->
-        <a href="../Numerasi-pilih-paket.html" title="Kembali">&#8592;</a>
-        <a href="../Numerasi-pilih-paket.html" title="Lanjut">&#8594;</a>
+        <a href="../Numerasi-paketB.html" title="Kembali">&#8592;</a>
+        <a href="../Numerasi-paketB.html" title="Lanjut">&#8594;</a>
       </div>
     </div>
 
