--- a/kelas-5/lembah/AKM/numerasi/paketB/soal2.html
+++ b/kelas-5/lembah/AKM/numerasi/paketB/soal2.html
@@ -203,8 +203,8 @@
 
     <!-- tombol navigasi -->
     <div class="btn-area">
-      <a href="numerasi.html" class="btn">&#8592;</a>
-      <a href="numerasi.html" class="btn">&#8594;</a>
+      <a href="../Numerasi-paketB.html" class="btn">&#8592;</a>
+      <a href="../Numerasi-paketB.html" class="btn">&#8594;</a>
     </div>
 
     <div class="sumber">
