--- a/kelas-5/lembah/AKM/numerasi/paketB/soal3.html
+++ b/kelas-5/lembah/AKM/numerasi/paketB/soal3.html
@@ -158,7 +158,7 @@
 <body>
   <div class="container">
     <div class="judul-biru">Soal Latihan ANBK</div>
-    <div class="subjudul">Latihan Soal 13</div>
+    <div class="subjudul">Latihan Soal 3</div>
 
     <p>Duta bermain kartu dengan</p>
     <p><span class="bold">tiga kartu angka berikut.</span></p>
@@ -203,8 +203,8 @@
 
     <!-- tombol navigasi -->
     <div class="btn-area">
-      <a href="numerasi.html" class="btn">&#8592;</a>
-      <a href="numerasi.html" class="btn">&#8594;</a>
+      <a href="../Numerasi-paketB.html" class="btn">&#8592;</a>
+      <a href="../Numerasi-paketB.html" class="btn">&#8594;</a>
     </div>
 
     <div class="sumber">
