--- a/kelas-5/lembah/AKM/numerasi/Numerasi-paketB.html
+++ b/kelas-5/lembah/AKM/numerasi/Numerasi-paketB.html
@@ -92,10 +92,10 @@ h1 img {
         <option value="paketB/soal1.html">Soal 1</option>
         <option value="paketB/soal2.html">Soal 2</option>
         <option value="paketB/soal3.html">Soal 3</option>
-        <option value="#soal4.html">Soal 4</option>
-        <option value="#soal5.html">Soal 5</option>
-        <option value="#soal6.html">Soal 6</option>
-        <option value="#soal7.html">Soal 7</option>
+        <option value="paketB/soal4.html">Soal 4</option>
+        <option value="paketB/soal5.html">Soal 5</option>
+        <option value="paketB/soal6.html">Soal 6</option>
+        <option value="paketB/soal7.html">Soal 7</option>
         <option value="#soal8.html">Soal 8</option>
         <option value="#soal9.html">Soal 9</option>
         <option value="#soal10.html">Soal 10</option>
@@ -113,4 +113,5 @@ function pilihSoal() {
 </script>
 </body>
 </html>
+
 
