--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
         <a href="#galeri" style="background: rgba(255,255,255,0.9); padding: 0.5rem 1rem; border-radius: 6px; color: #0288d1;">Galeri</a>
         <a href="kelas-5/kelas.html" style="background: rgba(255,255,255,0.9); padding: 0.5rem 1rem; border-radius: 6px; color: #0288d1;">Kelas</a>
         <a href="ceibu/eps1.html" style="background: rgba(255,255,255,0.9); padding: 0.5rem 1rem; border-radius: 6px; color: #0288d1;">Ceribu</a>
+        <a href="ekstra-komputer/daftar-isi.html" style="background: rgba(255,255,255,0.9); padding: 0.5rem 1rem; border-radius: 6px; color: #0288d1;">Ekstra Komputer</a>
       </div>
     </nav>
 
@@ -152,8 +153,3 @@
   </script>
 </body>
 </html>
-
-
-
-
-
