--- a/ekstra-komputer/perangkat-keras.html
+++ b/ekstra-komputer/perangkat-keras.html
@@ -279,7 +279,7 @@
 
   <div class="latihan">
     <h3>💡 Latihan Soal</h3>
-    <a href="SOAL1.html" class="btn-latihan">Mulai Latihan</a>
+    <a href="SOAL1.HTML" class="btn-latihan">Mulai Latihan</a>
   </div>
 </main>
 
@@ -300,3 +300,4 @@
 
 </body>
 </html>
+
