--- a/ekstra-komputer/daftar-isi.html
+++ b/ekstra-komputer/daftar-isi.html
@@ -106,7 +106,7 @@
 
     .corner{position:absolute;right:20px;top:20px;opacity:0.08;font-size:86px}
 
-    /* Tambahan agar link terlihat seperti teks biasa */
+    /* 🔹 Link terlihat seperti teks biasa */
     .link-summary {
       text-decoration: none;
       color: var(--accent);
@@ -173,14 +173,11 @@
           <summary>
             <div class="summary-left">
               <div>
-                <h3>b. Mengenal Perangkat Lunak Komputer</h3>
+                <h3><a href="ekstra-komputer/SOAL2.html" class="link-summary">b. Mengenal Perangkat Lunak Komputer</a></h3>
                 <p class="small">Program yang membuat komputer bisa bekerja</p>
               </div>
             </div>
           </summary>
-          <div class="content">
-            <p>Mengenal Perangkat Lunak Komputer</p>
-          </div>
         </details>
       </div>
     </div>
