--- a/ekstra-komputer/daftar-isi.html
+++ b/ekstra-komputer/daftar-isi.html
@@ -106,7 +106,7 @@
 
     .corner{position:absolute;right:20px;top:20px;opacity:0.08;font-size:86px}
 
-    /* 🔹 Link terlihat seperti teks biasa */
+    /* Tambahan agar link terlihat seperti teks biasa */
     .link-summary {
       text-decoration: none;
       color: var(--accent);
@@ -173,7 +173,8 @@
           <summary>
             <div class="summary-left">
               <div>
-                <h3><a href="ekstra-komputer/SOAL2.html" class="link-summary">b. Mengenal Perangkat Lunak Komputer</a></h3>
+                <!-- 🔹 Sudah diubah agar menuju ke perangkat-lunak.html -->
+                <h3><a href="perangkat-lunak.html" class="link-summary">b. Mengenal Perangkat Lunak Komputer</a></h3>
                 <p class="small">Program yang membuat komputer bisa bekerja</p>
               </div>
             </div>
