--- a/ekstra-komputer/perangkat-lunak.html
+++ b/ekstra-komputer/perangkat-lunak.html
@@ -31,7 +31,7 @@
 
   main {
     background-color: rgba(255, 255, 255, 0.9);
-    margin: 120px auto 100px;
+    margin: 120px auto 120px;
     padding: 25px;
     border-radius: 20px;
     max-width: 900px;
@@ -105,18 +105,17 @@
 
   footer {
     position: fixed;
-    bottom: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 1000;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgba(255,255,255,0.95);
+    border-top: 3px solid #0077cc;
     text-align: center;
-    font-size: 14px;
+    padding: 15px 0;
+    font-size: 15px;
     color: #333;
-    background-color: rgba(255, 255, 255, 0.95);
-    border: 2px solid #0077cc;
-    padding: 10px 25px;
-    border-radius: 12px;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+    font-weight: 500;
+    box-shadow: 0 -3px 10px rgba(0,0,0,0.2);
   }
 
   .btn-home {
@@ -263,7 +262,7 @@
 
   <div class="latihan">
     <h3>💡 Latihan Soal</h3>
-    <a href="SOAL2.html" class="btn-latihan">Mulai Latihan</a>
+    <a href="SOAL3.html" class="btn-latihan">Mulai Latihan</a>
   </div>
 </main>
 
