--- a/ekstra-komputer/daftar-isi.html
+++ b/ekstra-komputer/daftar-isi.html
@@ -6,14 +6,14 @@
   <title>Materi Pembelajaran Komputer</title>
   <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;700&family=Nunito:wght@300;600&display=swap" rel="stylesheet">
   <style>
-    :root{
+    :root {
       --card:#ffffff;
       --accent:#4aa3ff;
       --muted:#5b6b7a;
       --radius:16px;
     }
     *{box-sizing:border-box}
-    body{
+    body {
       margin:0;
       font-family:'Nunito',system-ui,Segoe UI,Helvetica,Arial;
       background-image:url('https://i.imgur.com/1NgzbO1.jpeg');
@@ -23,7 +23,7 @@
       color:#0f1724;
       padding:24px;
     }
-    header{
+    header {
       display:flex;
       gap:16px;
       align-items:center;
@@ -32,7 +32,7 @@
       border-radius:12px;
       padding:12px 16px;
     }
-    .logo{
+    .logo {
       font-size:50px;
       display:flex;
       align-items:center;
@@ -106,7 +106,7 @@
 
     .corner{position:absolute;right:20px;top:20px;opacity:0.08;font-size:86px}
 
-    /* Tambahan agar link terlihat seperti teks biasa */
+    /* 🔹 Link tampil seperti teks biasa */
     .link-summary {
       text-decoration: none;
       color: var(--accent);
@@ -132,11 +132,9 @@
       transform: scale(1.1);
     }
 
-    /* Responsif untuk HP */
+    /* 🔹 Responsif untuk HP */
     @media (max-width: 600px) {
-      .home-floating img {
-        width: 55px;
-      }
+      .home-floating img {width: 55px;}
     }
   </style>
 </head>
@@ -149,6 +147,7 @@
       </div>
     </header>
 
+    <!-- 🔹 Bagian I -->
     <div class="card">
       <div class="section-title">
         <div class="badge">🖥️</div>
@@ -173,7 +172,6 @@
           <summary>
             <div class="summary-left">
               <div>
-                <!-- 🔹 Sudah diubah agar menuju ke perangkat-lunak.html -->
                 <h3><a href="perangkat-lunak.html" class="link-summary">b. Mengenal Perangkat Lunak Komputer</a></h3>
                 <p class="small">Program yang membuat komputer bisa bekerja</p>
               </div>
@@ -183,6 +181,7 @@
       </div>
     </div>
 
+    <!-- 🔹 Bagian II -->
     <div class="card">
       <div class="section-title">
         <div class="badge">💾</div>
@@ -192,10 +191,11 @@
         </div>
       </div>
       <div style="margin-top:12px">
-        <p>Mengenal Perangkat Lunak Pengolah Kata</p>
+        <h3><a href="Mengenal-Perangkat-Lunak-Pengolah-Kata.html" class="link-summary">Mengenal Perangkat Lunak Pengolah Kata</a></h3>
       </div>
     </div>
 
+    <!-- 🔹 Bagian III -->
     <div class="card">
       <div class="section-title">
         <div class="badge">✏️</div>
@@ -230,37 +230,26 @@
           </summary>
           <div class="content">
             <p>Menggunakan Aplikasi Microsoft Word 2007</p>
-
             <div class="list">
               <strong>Menggunakan Menu Home</strong>
-              <div class="list">a. Menggunakan Sub Menu Font</div>
-              <div class="list">Latihan 1</div>
-              <div class="list">Latihan 2</div>
-              <div class="list">b. Menggunakan Sub Menu Paragraf</div>
-              <div class="list">Latihan 3</div>
-              <div class="list">Latihan 4</div>
-              <div class="list">Latihan 5</div>
-              <div class="list">Latihan 6</div>
+              <div class="list">a. Sub Menu Font</div>
+              <div class="list">Latihan 1–2</div>
+              <div class="list">b. Sub Menu Paragraf</div>
+              <div class="list">Latihan 3–6</div>
               <div class="list">Proyek 1</div>
 
               <div style="height:8px"></div>
               <strong>Menggunakan Menu Insert</strong>
-              <div class="list">a. Menggunakan Sub Menu Pages</div>
-              <div class="list">Latihan 7</div>
-              <div class="list">Latihan 8</div>
-              <div class="list">b. Menggunakan Sub Menu Table</div>
-              <div class="list">Latihan 9</div>
-              <div class="list">Latihan 10</div>
-              <div class="list">Latihan 11</div>
+              <div class="list">a. Sub Menu Pages (Latihan 7–8)</div>
+              <div class="list">b. Sub Menu Table (Latihan 9–11)</div>
 
               <div style="height:8px"></div>
-              <strong>c. Menggunakan Menu Illustrations</strong>
-              <div class="list">Latihan 12–19</div>
+              <strong>c. Menu Illustrations (Latihan 12–19)</strong>
 
               <div style="height:8px"></div>
               <strong>Menggunakan Page Layout</strong>
-              <div class="list">a. Menggunakan Page Setup</div>
-              <div class="list">b. Menggunakan Sub Menu Page Background</div>
+              <div class="list">a. Page Setup</div>
+              <div class="list">b. Page Background</div>
               <div class="list">Latihan 20</div>
               <div class="list">Proyek 2</div>
             </div>
@@ -269,6 +258,7 @@
       </div>
     </div>
 
+    <!-- 🔹 Bagian IV -->
     <div class="card">
       <div class="section-title">
         <div class="badge">📄</div>
@@ -284,6 +274,7 @@
       </div>
     </div>
 
+    <!-- 🔹 Bagian V -->
     <div class="card">
       <div class="section-title">
         <div class="badge">🖨️</div>
@@ -297,6 +288,7 @@
       </div>
     </div>
 
+    <!-- 🔹 Bagian VI -->
     <div class="card">
       <div class="section-title">
         <div class="badge">🌐</div>
@@ -318,7 +310,7 @@
     </div>
 
     <footer>
-      UPT SD NEGERI 160 GRESIK - 2025
+      © 2025 – Materi Komputer Dasar untuk SD - UPT SD NEGERI 160 GRESIK
     </footer>
 
     <div class="corner">✦</div>
