--- a/ekstra-komputer/daftar-isi.html
+++ b/ekstra-komputer/daftar-isi.html
@@ -205,25 +205,23 @@
         </div>
       </div>
       <div style="margin-top:12px">
+
         <details open>
           <summary>
             <div class="summary-left">
               <div>
-                <h3>A. Langkah-langkah Masuk ke Microsoft Word</h3>
+                <h3><a href="Langkah-langkah-Masuk-ke-Microsoft-Word.html" class="link-summary">A. Langkah-langkah Masuk ke Microsoft Word</a></h3>
                 <p class="small">Cara membuka dan mulai menulis</p>
               </div>
             </div>
           </summary>
-          <div class="content">
-            <p>Langkah-langkah Masuk ke Microsoft Word</p>
-          </div>
         </details>
 
         <details>
           <summary>
             <div class="summary-left">
               <div>
-                <h3>B. Menggunakan Aplikasi Microsoft Word 2007</h3>
+                <h3><a href="Menggunakan-Aplikasi-Microsoft-Word-2007.html" class="link-summary">B. Menggunakan Aplikasi Microsoft Word 2007</a></h3>
                 <p class="small">Mengenal menu dan latihan praktis</p>
               </div>
             </div>
