--- a/ekstra-komputer/Langkah-langkah-Masuk-ke-Microsoft-Word.html
+++ b/ekstra-komputer/Langkah-langkah-Masuk-ke-Microsoft-Word.html
@@ -191,7 +191,7 @@
 
   <div class="latihan">
     <h3>Latihan</h3>
-    <a href="SOAL-Langkah-Masuk-Word.html" class="btn-latihan">Mulai Latihan</a>
+    <a href="Soal-Langkah-langkah-Masuk-ke-Microsoft-Word.html" class="btn-latihan">Mulai Latihan</a>
   </div>
 
 </main>
@@ -206,3 +206,4 @@
 
 </body>
 </html>
+
